<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.main.MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipsGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:singleLine="true"
            android:scrollbars="none"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/rain"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/rain"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:theme="@style/Theme.MaterialComponents"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_state"
                app:chipCornerRadius="0dp">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/nature"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/nature"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:theme="@style/Theme.MaterialComponents"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_state"
                app:chipCornerRadius="0dp">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/animal"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/animal"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:theme="@style/Theme.MaterialComponents"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_state"
                app:chipCornerRadius="0dp">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/meditation"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/meditation"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:theme="@style/Theme.MaterialComponents"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_state"
                app:chipCornerRadius="0dp">
            </com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                android:id="@+id/noise"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/noise"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:theme="@style/Theme.MaterialComponents"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_state"
                app:chipCornerRadius="0dp">
            </com.google.android.material.chip.Chip>


            <com.google.android.material.chip.Chip
                android:id="@+id/urban"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/urban"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:theme="@style/Theme.MaterialComponents"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/chip_state"
                app:chipCornerRadius="0dp">
            </com.google.android.material.chip.Chip>

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <GridView
            android:id="@+id/gridViewPresets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:horizontalSpacing="8dp"
            android:numColumns="2"
            android:padding="8dp"
            android:verticalSpacing="8dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>